--- a/src/ProjectDIVA/ProjectDIVA.vcxproj
+++ b/src/ProjectDIVA/ProjectDIVA.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -28,12 +28,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -47,16 +49,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>d:\Program Files\Bass\c;d:\Program Files\dxsdk\Include;d:\Program Files\FMOD-sound-system\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>d:\Program Files\Bass\c;d:\Program Files\dxsdk\Lib;d:\Program Files\FMOD-sound-system\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)\external\Bass\c;$(SolutionDir)\external\dxsdk\Include;$(SolutionDir)\external\FMOD-sound-system\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\external\Bass\c;$(SolutionDir)\external\dxsdk\Lib;$(SolutionDir)\external\FMOD-sound-system\lib;$(LibraryPath)</LibraryPath>
     <TargetName>$(ProjectName)</TargetName>
-    <OutDir>D:\Project DIVA PC</OutDir>
+    <OutDir>$(SolutionDir)\..\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>d:\Program Files\Bass\c;d:\Program Files\dxsdk\Include;d:\Program Files\FMOD-sound-system\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>d:\Program Files\Bass\c;d:\Program Files\dxsdk\Lib;d:\Program Files\FMOD-sound-system\lib;$(LibraryPath)</LibraryPath>
-    <OutDir>d:\Project DIVA PC</OutDir>
+    <IncludePath>$(SolutionDir)\external\Bass\c;$(SolutionDir)\external\dxsdk\Include;$(SolutionDir)\external\FMOD-sound-system\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\external\Bass\c;$(SolutionDir)\external\dxsdk\Lib;$(SolutionDir)\external\FMOD-sound-system\lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\..\</OutDir>
     <TargetName>ProjectDIVA</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -95,6 +97,7 @@
       <DelayLoadDLLs>bass.dll;bass_fx.dll;fmodex.dll</DelayLoadDLLs>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
